syntax = "proto3";
package median_grpc;

message generateRequest {
    uint64 Id = 1;
    int64 Count = 2;
    int64 Min = 3;
    int64 Max = 4;
}

message QueryResponse {
    uint64 Id = 1;
    int64 Count = 2;
    int64 Min = 3;
    int64 Max = 4;
    int64 Sum = 5;
}

//findKçš„search
message SeachRequest {
    uint64 Id = 1;
    int64 Guess = 2;
}

message SearchResponse {
    uint64 Id = 1;
    int64 Smaller = 2;
    int64 Same = 3;
}

service Median {
    rpc Generate(generateRequest) returns (QueryResponse){}

    rpc Search(SeachRequest) returns (SearchResponse) {}
}